# snap_resizer

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
src/: main.rs  win_wrapper.rs
winapi_safe/: Cargo.toml
winapi_safe/src/: constants.rs  lib.rs
