[package]
name = "test"
version = "0.0.1"
authors = ["Aaron Landwehr <snaphat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "dwmapi", "winerror", "winuser"] }
